<resources>
    <string name="app_name">Ring Memos</string>
    <string name="Sign_up">Sign up</string>
    <string name="firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>

    <string name="signIn">Sign in</string>
    <string name="forget_password">Forget password ?</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memos">Memos</string>
    <string name="demoText">DemoText</string>
    <string name="contact_name">Contact name</string>
    <string name="settings">Settings</string>
    <string name="create_memo">Create Memo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_list">Contact List</string>
    <string name="memo_list">Memo List</string>
    <string name="addAlarmSound">Add Alarm Sound</string>
    <string name="log_out">Log Out</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="name">Name</string>
    <string name="update_profile">Update profile</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="password_must_be_at_least">Password must be at least 6 character.</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="create_your_memo">Create your memo</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_country">Please enter your country</string>
    <string name="recording_audio_memo">Recording Audio Memo</string>
    <string name="add_custom_alarm_sound">Add Custom Alarm sound</string>
    <string name="sound_1">Sound 1</string>
    <string name="set_sound">Set Sound</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="edit_memo">Edit Memo</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="_00_00_00_">00:00:00/</string>
    <string name="zero_text">00:00:00</string>
    <string name="view_memo">View Memo</string>
    <string name="continue_text">Continue</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Do you want to Logout?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_memo_name">Please enter memo name</string>
    <string name="enter_phone_number">Please enter Phone number</string>
    <string name="select_reminder">Please select reminder</string>
    <string name="select_alarm">Select Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_tone">Alarm tone</string>
    <string name="alert_alarm">Alert Alarm</string>
    <string name="emergency_alarm">Emergency Alarm</string>

    <string name="no_result_found">No Result Found</string>
    <string name="search_here">Search here...</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="yess">Yes</string>
    <string name="inc_call">Incoming Call</string>
    <string name="forget_password_text">Forget Password</string>
    <string name="go_to_sign_in">Go to Sign In</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify">verify</string>
    <string name="didn_t_receive_any_code">Didn\'t receive any code?</string>
    <string name="resend">Resend</string>
    <string name="back_to_sign_in">Back to Sign in</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="this_is_user_email">This is user email</string>
    <string name="password_unmatched">Password does not match</string>
    <string name="channel_id">alarmToneChannel</string>
    <!--    <string name="default_notification_channel_id" translatable="false">alarmChannel</string>-->
    <!--    <string name="emergency_alarm_channel_id" translatable="false">emergencyAlarmChannel</string>-->
    <!--    <string name="alarm_tone_channel_id" translatable="false">alarmToneChannel</string>-->
    <!--    <string name="alert_alarm_channel_id" translatable="false">alertAlarmChannel</string>-->
    <string name="welcome_app">Welcome</string>
    <string name="close">Close</string>
</resources>