<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/_50sdp"
           android:background="@color/green_500"
           android:layout_gravity="center">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/settings"
               android:textColor="@color/white"
               android:gravity="center"
               android:textSize="@dimen/_15ssp"
               android:layout_gravity="center"/>
       </LinearLayout>


        <TextView
            android:id="@+id/tvCreateMemo"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_memo"
            android:textSize="@dimen/_14ssp" />
        <View
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/tvEditProfile"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="@dimen/_14ssp" />
        <View
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"/>


        <TextView
            android:id="@+id/tvContactList"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_list"
            android:textSize="@dimen/_14ssp" />
        <View
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"/>


        <TextView
            android:id="@+id/tvMemoList"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo_list"
            android:textSize="@dimen/_14ssp" />
        <View
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"/>



        <TextView
            android:id="@+id/tvAddAlarm"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addAlarmSound"
            android:textSize="@dimen/_14ssp" />
        <View
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="@dimen/_14ssp" />
        <View
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"/>



    </LinearLayout>
</layout>