<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/toolbarholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/custom_toolbar"/>
    </LinearLayout>

    <Button
        android:id="@+id/editMemo_Btn"
        android:layout_below="@+id/toolbarholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/edit_memo"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewMemo_itemsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editMemo_Btn">
    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/audio_duration_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewMemo_itemsRV"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:text="00:00:00/"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:text="00:00:00"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/audio_duration_holder"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/play"/>

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/pause"/>

        <Button
            android:id="@+id/resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/resume"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/stop"/>




    </LinearLayout>


</RelativeLayout>