<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:textSize="70sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:textColor="#3BEF42"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupNameTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupNameTF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupLastNameTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupLastNameTF"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/eye"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="10sp"/>

            <Button
                android:id="@+id/signInBTN"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginVertical="20dp"
                android:text="@string/signIn"
                android:textSize="26sp"
                android:background="@drawable/custom_button"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:text="@string/dontHaveAnAccount"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_up"
                    android:textSize="22sp"
                    android:paddingLeft="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/green_200"/>

            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>
</layout>