<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/memoToolbar"
        layout="@layout/toolbar"/>


    <TextView
        android:layout_below="@id/memoToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/green_500"
        android:layout_marginVertical="@dimen/_30sdp"
        android:textSize="@dimen/_35sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgetEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/go_to_signInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_sign_in"
            android:textColor="@color/green_500"
            android:textSize="@dimen/_14ssp"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>