<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/otpVerif"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/otpVerifyToolbar"
            layout="@layout/toolbar"/>

        <ProgressBar
            android:id="@+id/verifyProgress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/_14ssp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/verify_otp"
                android:textColor="@color/green_500"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enter_your_otp"
                android:textColor="@color/green_500"
                android:textSize="@dimen/_14sdp" />


            <TextView
                android:id="@+id/verifEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/this_is_user_email"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_18sdp" />

            <com.chaos.view.PinView
                android:id="@+id/pinview"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:cursorVisible="true"
                android:gravity="center"
                android:inputType="number"
                android:itemBackground="@color/white"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemRadius="10dp"
                app:itemWidth="50dp" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/custom_button"
                android:text="@string/verify"
                android:onClick="onClickVerifyBtn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/didn_t_receive_any_code"
                    android:textColor="@color/green_500"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/resend"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</layout>

